# financial-vetting-engine

./: .env.example  .gitignore  README.md  pyproject.toml
src/financial_vetting_engine/: __init__.py  cli.py  main.py
src/financial_vetting_engine/api/: routes.py
src/financial_vetting_engine/core/: config.py
src/financial_vetting_engine/outputs/: 20251126-statements-2027-_20260327_215813.md  20251126-statements-2027-_20260327_215813.txt  20251126-statements-2027-_analysis_20260328_003934.md  20251126-statements-2027-_analysis_20260328_060136.md
src/financial_vetting_engine/schemas/: corroboration.py  extraction.py  flags.py  metrics.py  result.py  scores.py  transaction.py
src/financial_vetting_engine/services/: analyzer.py  corroborator.py  extractor.py  flagger.py  ingestor.py  normalizer.py  reporter.py
src/financial_vetting_engine/utils/: date_utils.py  money_utils.py
tests/: conftest.py  generate_samples.py  test_analyzer.py  test_api.py  test_corroborator.py  test_extractor.py  test_flagger.py  test_normalizer.py
