[project]
name = "financial-vetting-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shrey.gajjar", email = "shreydotgajjar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.4.0",
    "fastapi>=0.135.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[project.scripts]
financial-vetting-engine = "financial_vetting_engine:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
