[project]
name = "financial-vetting-engine"
version = "0.1.0"
description = "Open-source financial document analysis engine for US bank statements and pay stubs"
readme = "README.md"
authors = [
    { name = "shrey.gajjar", email = "shreydotgajjar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.4.0",
    "fastapi>=0.135.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "typer[all]>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
fv-engine = "financial_vetting_engine:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "reportlab>=4.4.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
